@@ -88,12 +88,12 @@ REPOSITORY
     <https://github.com/tupinek/Text-DSV>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2011-2015 Michal Špaček
+     © 2011-2015 Michal Josef Špaček
      BSD 2-Clause License
 
 VERSION
